RESOLVED FIXED104556
[WinCairo] Link fix in InspectorController.cpp
https://bugs.webkit.org/show_bug.cgi?id=104556
Summary [WinCairo] Link fix in InspectorController.cpp
peavo
Reported 2012-12-10 07:29:45 PST
There is missing an #if USE(ACCELERATED_COMPOSITING) check.
Attachments
Patch (1.36 KB, patch)
2012-12-10 07:33 PST, peavo
no flags
peavo
Comment 1 2012-12-10 07:33:00 PST
WebKit Review Bot
Comment 2 2012-12-10 08:01:36 PST
Comment on attachment 178549 [details] Patch Clearing flags on attachment: 178549 Committed r137158: <http://trac.webkit.org/changeset/137158>
WebKit Review Bot
Comment 3 2012-12-10 08:01:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.