[WinCairo] Link fix in InspectorController.cpp https://bugs.webkit.org/show_bug.cgi?id=104556

Patch by peavo@outlook.com <peavo@outlook.com> on 2012-12-10
Reviewed by Pavel Feldman.

* inspector/InspectorController.cpp:
(WebCore::InspectorController::InspectorController): Added missing #if check.

Canonical link: https://commits.webkit.org/122717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137158 268f45cc-cd09-0410-ab3c-d52691b4dbfc